# dms-cs-lectures

./: .gitignore  README.md  dms-cs.code-workspace  pyproject.toml  setup-python-env.ps1
src/Lecture1/: Exercise1.py  Lecture1.py
src/Lecture1/test_Lecture1/: test_integer_number.py
src/Lecture2/: .env  another_async_example.py  cpu_bound_example.py  io_bound_example.py
src/Lecture2/app/: dependencies.py  main.py
src/Lecture2/app/api/: deps.py
src/Lecture2/app/api/v1/endpoints/: user_endpoints.py
src/Lecture2/app/core/: config.py  logging.py  security.py
src/Lecture2/app/db/: session.py
src/Lecture2/app/db/models/: role_model.py  user_model.py
src/Lecture2/app/middleware/: logging_middleware.py
src/Lecture2/app/schemas/: user_schema.py
src/Lecture2/app/scripts/: configure_keycloak.py
src/Lecture2/app/services/: user_service.py
src/Lecture2/tests/: conftest.py
src/Lecture2/tests/test_integration/: test_user_integration.py
src/Lecture2/tests/test_units/test_user/: test_user_endpoints.py  test_user_models.py  test_user_schemas.py  test_user_services.py
tests/: test_integer_numbers.py  test_natural_number.py  test_natural_numbers.py  test_rational_number.py  test_rational_numbers.py
