[tool.poetry]
name = "dms-cs-lectures"
version = "0.1.0"
description = ""
authors = ["aleacarde"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
